fix some layout bug

--- a/src/main/components/NousRejoindre_page/NousRejoindre_page.styl
+++ b/src/main/components/NousRejoindre_page/NousRejoindre_page.styl
@@ -17,7 +17,10 @@ _xebiansQuoteDesktopPercentage = 100 - _xebiansImageDesktopPercentage
 .NousRejoindre_page-xebians-image
   width 100%
   height 140px
-  background-size cover
+  background-size contain
+  background-color white
+  background-repeat no-repeat
+  background-position center bottom
   display inline-block
   .size-class-not-width-compact &
     max-width 256px
